# urdf2webots

./: .gitignore  .gitmodules  .travis.yml  AtlasV2.urdf  CONTRIBUTING.md  README.md  URDFtoProto.py  batch_conversion.py  demo.py  math_utils.py  motoman_sia20d.urdf  parserURDF.py  pr2.urdf  requirements.txt  setup.py  urdf2webots.py  urdf2webots2.py  writeProto.py
.github/workflows/: python-publish.yml  test.yml  travis.yml
MirobotGripper_meshes/: MirobotGripper_gripper_left_0Mesh.proto  MirobotGripper_gripper_right_0Mesh.proto
[/home/david/urdf2webots/tests/results/: MotomanSia20d.proto,
automatic_conversion/urdf/robots/WLkata/protos/: Mirobot.json  Mirobot.urdf
automatic_conversion/urdf/robots/WLkata/protos/meshes/: Link1.STL  Link2.STL  Link3.STL  Link4.STL  Link5.STL  Link6.STL  base_link.STL
automatic_conversion/urdf/robots/kinova/protos/: GEN3-6DOF_VISION_URDF_ARM_V01.json  GEN3-6DOF_VISION_URDF_ARM_V01.urdf  Kinova_Gen3_6DOF.urdf
automatic_conversion/urdf/robots/kuka/kr10/protos/: kuka_kr10r1100sixx.urdf
automatic_conversion/urdf/robots/kuka/kr120/protos/: kuka_kr120r2500pro.urdf
automatic_conversion/urdf/robots/kuka/kr150/protos/: kuka_kr150.json  kuka_kr150.urdf
automatic_conversion/urdf/robots/kuka/kr16/protos/: kuka_kr16_2.urdf
automatic_conversion/urdf/robots/kuka/kr3/protos/: kuka_kr3r540.urdf
automatic_conversion/urdf/robots/kuka/kr5/protos/: kuka_kr5_arc.urdf
automatic_conversion/urdf/robots/kuka/kr6/protos/: kuka_kr6r700sixx.urdf  kuka_kr6r900sixx.urdf
automatic_conversion/urdf/robots/kuka/lbr_iiwa/protos/: kuka_lbr_iiwa_14_r820.json  kuka_lbr_iiwa_14_r820.urdf
automatic_conversion/urdf/robots/motoman/bmda3/protos/: motoman_bmda3.urdf
automatic_conversion/urdf/robots/universal_robots/protos/: UR10e.urdf  UR3e.urdf  UR5e.json  UR5e.urdf
collada/: __init__.py  asset.py  camera.py  common.py  controller.py  geometry.py  light.py  lineset.py  polygons.py  polylist.py  scene.py  schema.py  triangleset.py  util.py  xmlutil.py
collada/tests/: test_iteration.py  test_material.py
docs/: tutorial.md
meshes/: gripper_left.dae  gripper_right.dae  palm.dae  wrist.dae
pr2_description/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  package.xml
pr2_description/0pr2_textures/: 0convert_to_png.sh
pr2_description/test/: .gitignore  test_urdf.cpp
pr2_description/urdf/base_v0/: base.urdf.xacro
pr2_description/urdf/gripper_v0/: gripper.transmission.xacro
pr2_description/urdf/sensors/: double_stereo_camera.urdf.xacro  head_sensor_package.urdf.xacro  kinect2.urdf.xacro
tests/: requirements.txt  test_export.py  test_pep8.py
tests/expected/: Human.proto  HumanLegacyShapes.proto  HumanR2022a.proto  HumanR2023a.proto  HumanR2023b.proto  KukaLbrIiwa14R820.proto  KukaLbrIiwa14R820.txt  MotomanSia20d.proto  RobotWithDummyLink.proto  RobotWithLocalMeshes.proto  robotWithDummyLink.proto
tests/expected/MotomanSia20d_meshes/: MOTOMAN_AXIS_BMesh.proto  MOTOMAN_AXIS_EMesh.proto  MOTOMAN_AXIS_LMesh.proto  MOTOMAN_AXIS_RMesh.proto  MOTOMAN_AXIS_SMesh.proto  MOTOMAN_AXIS_TMesh.proto  MOTOMAN_AXIS_UMesh.proto  MOTOMAN_BASEMesh.proto  MotomanSia20d_MOTOMAN_AXIS_BMesh.proto  MotomanSia20d_MOTOMAN_AXIS_EMesh.proto  MotomanSia20d_MOTOMAN_AXIS_LMesh.proto  MotomanSia20d_MOTOMAN_AXIS_RMesh.proto  MotomanSia20d_MOTOMAN_AXIS_SMesh.proto  MotomanSia20d_MOTOMAN_AXIS_TMesh.proto  MotomanSia20d_MOTOMAN_AXIS_UMesh.proto  MotomanSia20d_MOTOMAN_BASEMesh.proto
tests/sources/: RobotWithDummyLink.urdf  RobotWithLocalMeshes.urdf  robotWithDummyLink.urdf
tests/sources/gait2392_simbody/: LICENSE.md
tests/sources/gait2392_simbody/sdf/: human.sdf  model.config
tests/sources/gait2392_simbody/urdf/: human.urdf
tests/sources/kuka_lbr_iiwa_support/urdf/: model.urdf
ur_description/meshes/ur10/visual/: #readme  base.dae  forearm.dae  shoulder.dae  upperarm.dae  wrist1.dae  wrist2.dae  wrist3.dae
ur_description/urdf/: ur10_robot.urdf
urdf2webots/: importer.py  math_utils.py  parserURDF.py  writeProto.py  writeRobot.py
wbt_test/protos/: .MotomanSia20d.cache  .Pr2.cache  .Ur10.cache  MotomanSia20d.proto
wbt_test/worlds/: .new.wbproj  new.wbt
(+56 files in other folders)
